Improve translation quality (part1)

--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -344,7 +344,7 @@ IMPLODE_GLUE2= and
 
 SONG_MENU_NAME_MAIN=Song menu
 SONG_MENU_PLAY=Sing
-SONG_MENU_CHANGEPLAYERS=Change Players
+SONG_MENU_CHANGEPLAYERS=Choose who sing it
 
 SONG_MENU_NAME_PLAYLIST=Song Menu
 SONG_MENU_PLAYLIST_ADD=Add Song
@@ -383,6 +383,24 @@ SONG_MENU_LEGEND_RAP=Rap
 SONG_MENU_LEGEND_CREATEDBY=Created by
 SONG_MENU_LEGEND_FIXEDBY=Fixed by
 SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+
+SONG_MENU_SONG=Song
+SONG_MENU_MEDLEY=Medley
+
+SONG_MENU_NAME_SONG=Song Menu
+SONG_MENU_NAME_MEDLEY=Medley Menu
+SONG_MENU_ADD_SONG=Add Song
+SONG_MENU_DELETE_SONG=Delete Song
+SONG_MENU_START_MEDLEY=Sing!
+SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+
+SONG_MENU_NAME_SORTING=Sort Menu
+SONG_MENU_SORTING_APPLY=Apply
+
+SONG_MENU_OPEN_CATEGORY=Open category
+SONG_MENU_CLOSE_CATEGORY=Close category
+SONG_MENU_START_JUKEBOX=Start Jukebox!
+SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 
 SONG_SEARCH_DESC=What do you want to sing now?
 
@@ -549,25 +567,8 @@ JUKEBOX_FIND=Find:
 JUKEBOX_SORT=Sort:
 JUKEBOX_SONGLIST=List of Songs
 
-SONG_MENU_SONG=Song
-SONG_MENU_MEDLEY=Medley
-
-SONG_MENU_NAME_SONG=Song Menu
-SONG_MENU_NAME_MEDLEY=Medley Menu
-SONG_MENU_ADD_SONG=Add Song
-SONG_MENU_DELETE_SONG=Delete Song
-SONG_MENU_START_MEDLEY=Sing!
-SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
-
-SONG_MENU_NAME_SORTING=Sort Menu
-SONG_MENU_SORTING_APPLY=Apply
-
 PARTY_PLAYLIST_MANUAL=Manual Selection
 PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
-SONG_MENU_OPEN_CATEGORY=Open category
-SONG_MENU_CLOSE_CATEGORY=Close category
-SONG_MENU_START_JUKEBOX=Start Jukebox!
-SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 
 WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
@@ -610,8 +611,88 @@ ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line 
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your microphone options
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
 
-;COMMON TRANSLATIONS:
+;# ---------------------------
+;#  -- COMMON TRANSLATIONS --
+;# ---------------------------
+
+
+C_ABOUT=About...
+C_ALL=All
 
 C_BACK=Back
+C_BOTTOM=Bottom
 
-SEARCH_NEW_SONGS=Search new songs
+C_CLASSIC=Classic
+C_CHALLENGE=Challenge
+C_COLOR_BEIGE=Beige
+C_COLOR_BLACK=Black
+C_COLOR_BLUE=Blue
+C_COLOR_BROWN=Brown
+C_COLOR_CYAN=Cyan
+C_COLOR_CHOCOLATE=Chocolate
+C_COLOR_DARKBLUE=Dark Blue
+C_COLOR_FLAME=Flame
+C_COLOR_GOLD=Gold
+C_COLOR_GRAY=Gray
+C_COLOR_GREEN=Green
+C_COLOR_GREENYELLOW=GreenYellow
+C_COLOR_HARLEQUIN=Harlequin
+C_COLOR_LAVENDER=Lavender
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Orange
+C_COLOR_ORCHID=Orchid
+C_COLOR_PINK=Pink
+C_COLOR_PLUM=Plum
+C_COLOR_RED=Red
+C_COLOR_SALMON=Salmon
+C_COLOR_SKY=Sky
+C_COLOR_STEELBLUE=Steel Blue
+C_COLOR_TEAL=Teal
+C_COLOR_TURQUOISE=Turquoise
+C_COLOR_VIOLET=Violet
+C_COLOR_WHITE=White
+C_COLOR_YELLOW=Yellow
+C_CONTINUE=Continue
+C_CREATEDBY=Created by
+
+C_ERROR=Error
+
+C_FIND=Find
+C_FIXEDBY=Fixed by
+C_FOLDERS=Folders
+
+C_INFORMATION=Information
+
+C_JOKER=Joker
+C_JUKEBOX=Jukebox
+
+C_PLAYERS=Players
+
+C_LEGEND=Legend
+C_LINE=Line
+
+C_MEDLEY=Medley
+C_MEDLEYC=Medyley Calcultated
+C_MODE=Mode
+
+C_NEXT=Next
+C_NO=No
+
+C_RANDOM=Random
+C_RAP=Rap
+C_REPEAT=Repeat
+
+C_SAVE=Save
+C_SEARCH_NEW_SONGS=Search for new songs
+C_SING=Sing
+C_SONG=Song
+C_SONGS=Songs
+C_SORT=Sort
+
+C_TOP=Top
+
+C_UNVALIDATED=Unvalidated
+
+C_VIDEO=Video
+
+C_YES=Yes
