--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -384,6 +384,24 @@ SONG_MENU_LEGEND_DUET=Duet
 ;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
 ;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
 
+;TODO: SONG_MENU_SONG=Song
+;TODO: SONG_MENU_MEDLEY=Medley
+
+SONG_MENU_NAME_SONG=Playliste
+;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
+SONG_MENU_ADD_SONG=Dodaj Pjesmu
+SONG_MENU_DELETE_SONG=Izbriši Pjesmu
+;TODO: SONG_MENU_START_MEDLEY=Sing!
+;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+
+;TODO: SONG_MENU_NAME_SORTING=Sort Menu
+;TODO: SONG_MENU_SORTING_APPLY=Apply
+
+;TODO: SONG_MENU_OPEN_CATEGORY=Open category
+;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
+;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
+;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Party mod
@@ -549,25 +567,8 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Sljed. igrači za mikr.
 ;TODO: JUKEBOX_SORT=Sort:
 ;TODO: JUKEBOX_SONGLIST=List of Songs
 
-;TODO: SONG_MENU_SONG=Song
-;TODO: SONG_MENU_MEDLEY=Medley
-
-SONG_MENU_NAME_SONG=Playliste
-;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
-SONG_MENU_ADD_SONG=Dodaj Pjesmu
-SONG_MENU_DELETE_SONG=Izbriši Pjesmu
-;TODO: SONG_MENU_START_MEDLEY=Sing!
-;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
-
-;TODO: SONG_MENU_NAME_SORTING=Sort Menu
-;TODO: SONG_MENU_SORTING_APPLY=Apply
-
 ;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
-;TODO: SONG_MENU_OPEN_CATEGORY=Open category
-;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
-;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
-;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
@@ -612,6 +613,83 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igrač %d nije dodijeljen mikrofonu. Provjerit
 
 ;COMMON TRANSLATIONS:
 
-;TODO: C_BACK=Back
+;TODO: C_ABOUT=About...
+;TODO: C_ALL=All
 
-;TODO: SEARCH_NEW_SONGS=Search new songs
+;TODO: C_BACK=Back
+;TODO: C_BOTTOM=Bottom
+
+;TODO: C_CLASSIC=Classic
+;TODO: C_CHALLENGE=Challenge
+;TODO: C_COLOR_BEIGE=Beige
+;TODO: C_COLOR_BLACK=Black
+;TODO: C_COLOR_BLUE=Blue
+;TODO: C_COLOR_BROWN=Brown
+;TODO: C_COLOR_CYAN=Cyan
+;TODO: C_COLOR_CHOCOLATE=Chocolate
+;TODO: C_COLOR_DARKBLUE=Dark Blue
+;TODO: C_COLOR_FLAME=Flame
+;TODO: C_COLOR_GOLD=Gold
+;TODO: C_COLOR_GRAY=Gray
+;TODO: C_COLOR_GREEN=Green
+;TODO: C_COLOR_GREENYELLOW=GreenYellow
+;TODO: C_COLOR_HARLEQUIN=Harlequin
+;TODO: C_COLOR_LAVENDER=Lavender
+;TODO: C_COLOR_MAGENTA=Magenta
+;TODO: C_COLOR_ORANGE=Orange
+;TODO: C_COLOR_ORCHID=Orchid
+;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_PLUM=Plum
+;TODO: C_COLOR_RED=Red
+;TODO: C_COLOR_SALMON=Salmon
+;TODO: C_COLOR_SKY=Sky
+;TODO: C_COLOR_STEELBLUE=Steel Blue
+;TODO: C_COLOR_TEAL=Teal
+;TODO: C_COLOR_TURQUOISE=Turquoise
+;TODO: C_COLOR_VIOLET=Violet
+;TODO: C_COLOR_WHITE=White
+;TODO: C_COLOR_YELLOW=Yellow
+;TODO: C_CONTINUE=Continue
+;TODO: C_CREATEDBY=Created by
+
+;TODO: C_ERROR=Error
+
+;TODO: C_FIND=Find
+;TODO: C_FIXEDBY=Fixed by
+;TODO: C_FOLDERS=Folders
+
+;TODO: C_INFORMATION=Information
+
+;TODO: C_JOKER=Joker
+;TODO: C_JUKEBOX=Jukebox
+
+;TODO: C_PLAYERS=Players
+
+;TODO: C_LEGEND=Legend
+;TODO: C_LINE=Line
+
+;TODO: C_MEDLEY=Medley
+;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MODE=Mode
+
+;TODO: C_NEXT=Next
+;TODO: C_NO=No
+
+;TODO: C_RANDOM=Random
+;TODO: C_RAP=Rap
+;TODO: C_REPEAT=Repeat
+
+;TODO: C_SAVE=Save
+;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SING=Sing
+;TODO: C_SONG=Song
+;TODO: C_SONGS=Songs
+;TODO: C_SORT=Sort
+
+;TODO: C_TOP=Top
+
+;TODO: C_UNVALIDATED=Unvalidated
+
+;TODO: C_VIDEO=Video
+
+;TODO: C_YES=Yes
