--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -384,6 +384,24 @@ SONG_MENU_LEGEND_DUET=Duett
 ;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
 ;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
 
+SONG_MENU_SONG=Song
+SONG_MENU_MEDLEY=Medley
+
+SONG_MENU_NAME_SONG=Song Menü
+SONG_MENU_NAME_MEDLEY=Medley Menü
+SONG_MENU_ADD_SONG=Song hinzufügen
+SONG_MENU_DELETE_SONG=Song löschen
+SONG_MENU_START_MEDLEY=Singen!
+SONG_MENU_START_5_MEDLEY=%0:d Songs singen!
+
+SONG_MENU_NAME_SORTING=Sortierungsmenü
+SONG_MENU_SORTING_APPLY=Anwenden
+
+SONG_MENU_OPEN_CATEGORY=Kategorie öffnen
+SONG_MENU_CLOSE_CATEGORY=Kategorie schließen
+SONG_MENU_START_JUKEBOX=Jukebox starten!
+SONG_MENU_NAME_JUKEBOX=Jukebox Menü
+
 SONG_SEARCH_DESC=Was wollen Sie jetzt singen?
 
 PARTY_MODE=Party-Modus
@@ -549,25 +567,8 @@ JUKEBOX_FIND=Finde:
 JUKEBOX_SORT=Sortieren:
 JUKEBOX_SONGLIST=Songliste:
 
-SONG_MENU_SONG=Song
-SONG_MENU_MEDLEY=Medley
-
-SONG_MENU_NAME_SONG=Song Menü
-SONG_MENU_NAME_MEDLEY=Medley Menü
-SONG_MENU_ADD_SONG=Song hinzufügen
-SONG_MENU_DELETE_SONG=Song löschen
-SONG_MENU_START_MEDLEY=Singen!
-SONG_MENU_START_5_MEDLEY=%0:d Songs singen!
-
-SONG_MENU_NAME_SORTING=Sortierungsmenü
-SONG_MENU_SORTING_APPLY=Anwenden
-
 PARTY_PLAYLIST_MANUAL=Manuelle Auswahl
 PARTY_MODE_JUKEBOX_NO_SONGS=Playlist ist leer!
-SONG_MENU_OPEN_CATEGORY=Kategorie öffnen
-SONG_MENU_CLOSE_CATEGORY=Kategorie schließen
-SONG_MENU_START_JUKEBOX=Jukebox starten!
-SONG_MENU_NAME_JUKEBOX=Jukebox Menü
 
 WEBSITE_EXIST_SONG=Dieser Song ist der folgenden Webseite zugeordnet: %0:s
 WEBSITE_NOT_EXIST_SONG=Dieser Song ist keiner Webseite zugeordnet!
@@ -612,7 +613,83 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt.\nÜber
 
 ;COMMON TRANSLATIONS:
 
+;TODO: C_ABOUT=About...
+;TODO: C_ALL=All
+
 ;TODO: C_BACK=Back
+;TODO: C_BOTTOM=Bottom
 
-;TODO: SEARCH_NEW_SONGS=Search new songs
+;TODO: C_CLASSIC=Classic
+;TODO: C_CHALLENGE=Challenge
+;TODO: C_COLOR_BEIGE=Beige
+;TODO: C_COLOR_BLACK=Black
+;TODO: C_COLOR_BLUE=Blue
+;TODO: C_COLOR_BROWN=Brown
+;TODO: C_COLOR_CYAN=Cyan
+;TODO: C_COLOR_CHOCOLATE=Chocolate
+;TODO: C_COLOR_DARKBLUE=Dark Blue
+;TODO: C_COLOR_FLAME=Flame
+;TODO: C_COLOR_GOLD=Gold
+;TODO: C_COLOR_GRAY=Gray
+;TODO: C_COLOR_GREEN=Green
+;TODO: C_COLOR_GREENYELLOW=GreenYellow
+;TODO: C_COLOR_HARLEQUIN=Harlequin
+;TODO: C_COLOR_LAVENDER=Lavender
+;TODO: C_COLOR_MAGENTA=Magenta
+;TODO: C_COLOR_ORANGE=Orange
+;TODO: C_COLOR_ORCHID=Orchid
+;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_PLUM=Plum
+;TODO: C_COLOR_RED=Red
+;TODO: C_COLOR_SALMON=Salmon
+;TODO: C_COLOR_SKY=Sky
+;TODO: C_COLOR_STEELBLUE=Steel Blue
+;TODO: C_COLOR_TEAL=Teal
+;TODO: C_COLOR_TURQUOISE=Turquoise
+;TODO: C_COLOR_VIOLET=Violet
+;TODO: C_COLOR_WHITE=White
+;TODO: C_COLOR_YELLOW=Yellow
+;TODO: C_CONTINUE=Continue
+;TODO: C_CREATEDBY=Created by
 
+;TODO: C_ERROR=Error
+
+;TODO: C_FIND=Find
+;TODO: C_FIXEDBY=Fixed by
+;TODO: C_FOLDERS=Folders
+
+;TODO: C_INFORMATION=Information
+
+;TODO: C_JOKER=Joker
+;TODO: C_JUKEBOX=Jukebox
+
+;TODO: C_PLAYERS=Players
+
+;TODO: C_LEGEND=Legend
+;TODO: C_LINE=Line
+
+;TODO: C_MEDLEY=Medley
+;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MODE=Mode
+
+;TODO: C_NEXT=Next
+;TODO: C_NO=No
+
+;TODO: C_RANDOM=Random
+;TODO: C_RAP=Rap
+;TODO: C_REPEAT=Repeat
+
+;TODO: C_SAVE=Save
+;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SING=Sing
+;TODO: C_SONG=Song
+;TODO: C_SONGS=Songs
+;TODO: C_SORT=Sort
+
+;TODO: C_TOP=Top
+
+;TODO: C_UNVALIDATED=Unvalidated
+
+;TODO: C_VIDEO=Video
+
+;TODO: C_YES=Yes
