--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -384,6 +384,24 @@ SONG_MENU_LEGEND_CREATEDBY=Creada por
 SONG_MENU_LEGEND_FIXEDBY=Reparada por
 SONG_MENU_LEGEND_UNVALIDATED=No validada
 
+SONG_MENU_SONG=Canción
+SONG_MENU_MEDLEY=Versión corta
+
+SONG_MENU_NAME_SONG=Menu Canción
+SONG_MENU_NAME_MEDLEY=Versión corta
+SONG_MENU_ADD_SONG=Añadir canción
+SONG_MENU_DELETE_SONG=Eliminar canción
+SONG_MENU_START_MEDLEY=Cantar
+SONG_MENU_START_5_MEDLEY=Cantar %0:d canciones al azar
+
+SONG_MENU_NAME_SORTING=Menu ordenar
+SONG_MENU_SORTING_APPLY=Aplicar
+
+SONG_MENU_OPEN_CATEGORY=Abrir categoria
+SONG_MENU_CLOSE_CATEGORY=Cerrar categoria
+SONG_MENU_START_JUKEBOX=¡Iniciar Jukebox!
+SONG_MENU_NAME_JUKEBOX=Menú Jukebox
+
 SONG_SEARCH_DESC=¿Qué quieres cantar ahora?
 
 PARTY_MODE=Modo fiesta
@@ -549,25 +567,8 @@ JUKEBOX_FIND=Buscar:
 JUKEBOX_SORT=Ordenar:
 JUKEBOX_SONGLIST=Lista de canciones
 
-SONG_MENU_SONG=Canción
-SONG_MENU_MEDLEY=Versión corta
-
-SONG_MENU_NAME_SONG=Menu Canción
-SONG_MENU_NAME_MEDLEY=Versión corta
-SONG_MENU_ADD_SONG=Añadir canción
-SONG_MENU_DELETE_SONG=Eliminar canción
-SONG_MENU_START_MEDLEY=Cantar
-SONG_MENU_START_5_MEDLEY=Cantar %0:d canciones al azar
-
-SONG_MENU_NAME_SORTING=Menu ordenar
-SONG_MENU_SORTING_APPLY=Aplicar
-
 PARTY_PLAYLIST_MANUAL=Seleción manual
 PARTY_MODE_JUKEBOX_NO_SONGS=La lista de canciones está vacía
-SONG_MENU_OPEN_CATEGORY=Abrir categoria
-SONG_MENU_CLOSE_CATEGORY=Cerrar categoria
-SONG_MENU_START_JUKEBOX=¡Iniciar Jukebox!
-SONG_MENU_NAME_JUKEBOX=Menú Jukebox
 
 WEBSITE_EXIST_SONG=La cancion pertenece al sitio: %0:s
 WEBSITE_NOT_EXIST_SONG=La canción no pertenece a ningún sitio
@@ -612,6 +613,83 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Al jugador %d no se le ha asignado ningún mic
 
 ;COMMON TRANSLATIONS:
 
-C_BACK=Atrás
+C_ABOUT=Acerca de...
+C_ALL=Todo
 
-SEARCH_NEW_SONGS=Buscar canciones nuevas
+C_BACK=Atrás
+C_BOTTOM=Inferior
+
+C_CLASSIC=Clásico
+C_CHALLENGE=Reto
+C_COLOR_BEIGE=Beis
+C_COLOR_BLACK=Negro
+C_COLOR_BLUE=Azul
+C_COLOR_BROWN=Marrón
+C_COLOR_CYAN=Cian
+C_COLOR_CHOCOLATE=Chocolate
+C_COLOR_DARKBLUE=Azul
+C_COLOR_FLAME=LLama
+C_COLOR_GOLD=Oro
+C_COLOR_GRAY=Gris
+C_COLOR_GREEN=Verde
+C_COLOR_GREENYELLOW=Lima
+C_COLOR_HARLEQUIN=Arlequín
+C_COLOR_LAVENDER=Lavanda
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Naranja
+C_COLOR_ORCHID=Orquídea
+C_COLOR_PINK=Rosa
+C_COLOR_PLUM=Ciruela
+C_COLOR_RED=Rojo
+C_COLOR_SALMON=Salmón
+C_COLOR_SKY=Cielo
+C_COLOR_STEELBLUE=Azul metálico
+C_COLOR_TEAL=Verde Azulado
+C_COLOR_TURQUOISE=Turquesa
+C_COLOR_VIOLET=Violeta
+C_COLOR_WHITE=Blanco
+C_COLOR_YELLOW=Amarillo
+C_CONTINUE=Continuar
+C_CREATEDBY=Creado por
+
+C_ERROR=Error
+
+C_FIND=Buscar
+C_FIXEDBY=Reparado por
+C_FOLDERS=Carpetas
+
+C_INFORMATION=Información
+
+C_JOKER=Comodín
+C_JUKEBOX=Reproductor de canciones
+
+C_PLAYERS=Jugadores
+
+C_LEGEND=Leyenda
+C_LINE=Línea
+
+C_MEDLEY=Versión corta
+C_MEDLEYC=Versión corta calculada
+C_MODE=Modo
+
+C_NEXT=Siguiente
+C_NO=No
+
+C_RANDOM=Aleatorio
+C_RAP=Rap
+C_REPEAT=Repetir
+
+C_SAVE=Guardar
+C_SEARCH_NEW_SONGS=Buscar canciones nuevas
+C_SING=Cantar
+C_SONG=Canción
+C_SONGS=Canciones
+C_SORT=Ordenar
+
+C_TOP=Superior
+
+C_UNVALIDATED=No validada
+
+C_VIDEO=Video
+
+C_YES=Sí
