--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -384,6 +384,24 @@ SONG_MENU_LEGEND_CREATEDBY=Créée par
 SONG_MENU_LEGEND_FIXEDBY=Réparée par
 ;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
 
+SONG_MENU_SONG=Chanson
+SONG_MENU_MEDLEY=Medley
+
+SONG_MENU_NAME_SONG=Menu
+SONG_MENU_NAME_MEDLEY=Menu des Medley
+SONG_MENU_ADD_SONG=Ajouter la chanson
+SONG_MENU_DELETE_SONG=Supprimer la chanson
+SONG_MENU_START_MEDLEY=Chantez !
+SONG_MENU_START_5_MEDLEY=Chantez %0:d chansons !
+
+SONG_MENU_NAME_SORTING=Trier...
+SONG_MENU_SORTING_APPLY=Appliquer
+
+SONG_MENU_OPEN_CATEGORY=Ouvrir la catégorie
+SONG_MENU_CLOSE_CATEGORY=Fermer la catégorie
+SONG_MENU_START_JUKEBOX=Démarrez le Jukebox !
+SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+
 SONG_SEARCH_DESC=Que voulez-vous chanter maintenant?
 
 PARTY_MODE=Mode fête
@@ -549,25 +567,8 @@ JUKEBOX_FIND=Rechercher:
 JUKEBOX_SORT=Trier:
 JUKEBOX_SONGLIST=Liste de chansons
 
-SONG_MENU_SONG=Chanson
-SONG_MENU_MEDLEY=Medley
-
-SONG_MENU_NAME_SONG=Menu
-SONG_MENU_NAME_MEDLEY=Menu des Medley
-SONG_MENU_ADD_SONG=Ajouter la chanson
-SONG_MENU_DELETE_SONG=Supprimer la chanson
-SONG_MENU_START_MEDLEY=Chantez !
-SONG_MENU_START_5_MEDLEY=Chantez %0:d chansons !
-
-SONG_MENU_NAME_SORTING=Trier...
-SONG_MENU_SORTING_APPLY=Appliquer
-
 PARTY_PLAYLIST_MANUAL=Sélection manuelle
 PARTY_MODE_JUKEBOX_NO_SONGS=La playlist est vide !
-SONG_MENU_OPEN_CATEGORY=Ouvrir la catégorie
-SONG_MENU_CLOSE_CATEGORY=Fermer la catégorie
-SONG_MENU_START_JUKEBOX=Démarrez le Jukebox !
-SONG_MENU_NAME_JUKEBOX=Menu Jukebox
 
 WEBSITE_EXIST_SONG=La chanson appartient au site : %0:s
 WEBSITE_NOT_EXIST_SONG=La chanson n'appartient à aucun site !
@@ -612,6 +613,83 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Aucun micro n'est attribué au joueur %d. Merc
 
 ;COMMON TRANSLATIONS:
 
-C_BACK=Avant
+;TODO: C_ABOUT=About...
+;TODO: C_ALL=All
 
-SEARCH_NEW_SONGS=Rechercher de nouvelles chansons
+C_BACK=Avant
+;TODO: C_BOTTOM=Bottom
+
+;TODO: C_CLASSIC=Classic
+;TODO: C_CHALLENGE=Challenge
+;TODO: C_COLOR_BEIGE=Beige
+;TODO: C_COLOR_BLACK=Black
+;TODO: C_COLOR_BLUE=Blue
+;TODO: C_COLOR_BROWN=Brown
+;TODO: C_COLOR_CYAN=Cyan
+;TODO: C_COLOR_CHOCOLATE=Chocolate
+;TODO: C_COLOR_DARKBLUE=Dark Blue
+;TODO: C_COLOR_FLAME=Flame
+;TODO: C_COLOR_GOLD=Gold
+;TODO: C_COLOR_GRAY=Gray
+;TODO: C_COLOR_GREEN=Green
+;TODO: C_COLOR_GREENYELLOW=GreenYellow
+;TODO: C_COLOR_HARLEQUIN=Harlequin
+;TODO: C_COLOR_LAVENDER=Lavender
+;TODO: C_COLOR_MAGENTA=Magenta
+;TODO: C_COLOR_ORANGE=Orange
+;TODO: C_COLOR_ORCHID=Orchid
+;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_PLUM=Plum
+;TODO: C_COLOR_RED=Red
+;TODO: C_COLOR_SALMON=Salmon
+;TODO: C_COLOR_SKY=Sky
+;TODO: C_COLOR_STEELBLUE=Steel Blue
+;TODO: C_COLOR_TEAL=Teal
+;TODO: C_COLOR_TURQUOISE=Turquoise
+;TODO: C_COLOR_VIOLET=Violet
+;TODO: C_COLOR_WHITE=White
+;TODO: C_COLOR_YELLOW=Yellow
+;TODO: C_CONTINUE=Continue
+;TODO: C_CREATEDBY=Created by
+
+;TODO: C_ERROR=Error
+
+;TODO: C_FIND=Find
+;TODO: C_FIXEDBY=Fixed by
+;TODO: C_FOLDERS=Folders
+
+;TODO: C_INFORMATION=Information
+
+;TODO: C_JOKER=Joker
+;TODO: C_JUKEBOX=Jukebox
+
+;TODO: C_PLAYERS=Players
+
+;TODO: C_LEGEND=Legend
+;TODO: C_LINE=Line
+
+;TODO: C_MEDLEY=Medley
+;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MODE=Mode
+
+;TODO: C_NEXT=Next
+;TODO: C_NO=No
+
+;TODO: C_RANDOM=Random
+;TODO: C_RAP=Rap
+;TODO: C_REPEAT=Repeat
+
+;TODO: C_SAVE=Save
+C_SEARCH_NEW_SONGS=Rechercher de nouvelles chansons
+;TODO: C_SING=Sing
+;TODO: C_SONG=Song
+;TODO: C_SONGS=Songs
+;TODO: C_SORT=Sort
+
+;TODO: C_TOP=Top
+
+;TODO: C_UNVALIDATED=Unvalidated
+
+;TODO: C_VIDEO=Video
+
+;TODO: C_YES=Yes
