--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -384,6 +384,24 @@ SONG_MENU_LEGEND_DUET=Duet
 ;TODO: SONG_MENU_LEGEND_FIXEDBY=Fixed by
 ;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
 
+SONG_MENU_SONG=Òran
+SONG_MENU_MEDLEY=Measgachadh
+
+SONG_MENU_NAME_SONG=Clàr-taice nan òran
+SONG_MENU_NAME_MEDLEY=Clàr-taice a' mheasgachaidh
+SONG_MENU_ADD_SONG=Cuir òran ris
+SONG_MENU_DELETE_SONG=Sguab às an òran
+SONG_MENU_START_MEDLEY=Seinn!
+SONG_MENU_START_5_MEDLEY=Seinn %0:d òra(i)n!
+
+SONG_MENU_NAME_SORTING=Clàr-taice seòrsachaidh
+SONG_MENU_SORTING_APPLY=Cuir an sàs
+
+SONG_MENU_OPEN_CATEGORY=Fosgail roinn-seòrsa
+SONG_MENU_CLOSE_CATEGORY=Dùin an roinn-seòrsa
+SONG_MENU_START_JUKEBOX=Tòisich an t-inneal-chlàr!
+SONG_MENU_NAME_JUKEBOX=Clàr-taice inneil-chlàr
+
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
 PARTY_MODE=Modh cèilidh
@@ -549,25 +567,8 @@ JUKEBOX_FIND=Lorg:
 JUKEBOX_SORT=Seòrsaich:
 JUKEBOX_SONGLIST=Liosta nan òran
 
-SONG_MENU_SONG=Òran
-SONG_MENU_MEDLEY=Measgachadh
-
-SONG_MENU_NAME_SONG=Clàr-taice nan òran
-SONG_MENU_NAME_MEDLEY=Clàr-taice a' mheasgachaidh
-SONG_MENU_ADD_SONG=Cuir òran ris
-SONG_MENU_DELETE_SONG=Sguab às an òran
-SONG_MENU_START_MEDLEY=Seinn!
-SONG_MENU_START_5_MEDLEY=Seinn %0:d òra(i)n!
-
-SONG_MENU_NAME_SORTING=Clàr-taice seòrsachaidh
-SONG_MENU_SORTING_APPLY=Cuir an sàs
-
 PARTY_PLAYLIST_MANUAL=Taghadh a làimh
 PARTY_MODE_JUKEBOX_NO_SONGS=Tha an liosta-chluich falamh!
-SONG_MENU_OPEN_CATEGORY=Fosgail roinn-seòrsa
-SONG_MENU_CLOSE_CATEGORY=Dùin an roinn-seòrsa
-SONG_MENU_START_JUKEBOX=Tòisich an t-inneal-chlàr!
-SONG_MENU_NAME_JUKEBOX=Clàr-taice inneil-chlàr
 
 WEBSITE_EXIST_SONG=Tha an t-òran a’ buntainn ris an làrach-lìn: %0:s
 WEBSITE_NOT_EXIST_SONG=Chan eil an t-òran a’ buntainn ri làrach-lìn sam bith!
@@ -612,6 +613,83 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Cha deach micreofon a shònrachadh dha chluich
 
 ;COMMON TRANSLATIONS:
 
-;TODO: C_BACK=Back
+;TODO: C_ABOUT=About...
+;TODO: C_ALL=All
 
-;TODO: SEARCH_NEW_SONGS=Search new songs
+;TODO: C_BACK=Back
+;TODO: C_BOTTOM=Bottom
+
+;TODO: C_CLASSIC=Classic
+;TODO: C_CHALLENGE=Challenge
+;TODO: C_COLOR_BEIGE=Beige
+;TODO: C_COLOR_BLACK=Black
+;TODO: C_COLOR_BLUE=Blue
+;TODO: C_COLOR_BROWN=Brown
+;TODO: C_COLOR_CYAN=Cyan
+;TODO: C_COLOR_CHOCOLATE=Chocolate
+;TODO: C_COLOR_DARKBLUE=Dark Blue
+;TODO: C_COLOR_FLAME=Flame
+;TODO: C_COLOR_GOLD=Gold
+;TODO: C_COLOR_GRAY=Gray
+;TODO: C_COLOR_GREEN=Green
+;TODO: C_COLOR_GREENYELLOW=GreenYellow
+;TODO: C_COLOR_HARLEQUIN=Harlequin
+;TODO: C_COLOR_LAVENDER=Lavender
+;TODO: C_COLOR_MAGENTA=Magenta
+;TODO: C_COLOR_ORANGE=Orange
+;TODO: C_COLOR_ORCHID=Orchid
+;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_PLUM=Plum
+;TODO: C_COLOR_RED=Red
+;TODO: C_COLOR_SALMON=Salmon
+;TODO: C_COLOR_SKY=Sky
+;TODO: C_COLOR_STEELBLUE=Steel Blue
+;TODO: C_COLOR_TEAL=Teal
+;TODO: C_COLOR_TURQUOISE=Turquoise
+;TODO: C_COLOR_VIOLET=Violet
+;TODO: C_COLOR_WHITE=White
+;TODO: C_COLOR_YELLOW=Yellow
+;TODO: C_CONTINUE=Continue
+;TODO: C_CREATEDBY=Created by
+
+;TODO: C_ERROR=Error
+
+;TODO: C_FIND=Find
+;TODO: C_FIXEDBY=Fixed by
+;TODO: C_FOLDERS=Folders
+
+;TODO: C_INFORMATION=Information
+
+;TODO: C_JOKER=Joker
+;TODO: C_JUKEBOX=Jukebox
+
+;TODO: C_PLAYERS=Players
+
+;TODO: C_LEGEND=Legend
+;TODO: C_LINE=Line
+
+;TODO: C_MEDLEY=Medley
+;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MODE=Mode
+
+;TODO: C_NEXT=Next
+;TODO: C_NO=No
+
+;TODO: C_RANDOM=Random
+;TODO: C_RAP=Rap
+;TODO: C_REPEAT=Repeat
+
+;TODO: C_SAVE=Save
+;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SING=Sing
+;TODO: C_SONG=Song
+;TODO: C_SONGS=Songs
+;TODO: C_SORT=Sort
+
+;TODO: C_TOP=Top
+
+;TODO: C_UNVALIDATED=Unvalidated
+
+;TODO: C_VIDEO=Video
+
+;TODO: C_YES=Yes
