Added playlist to song menu

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -353,7 +353,7 @@ SONG_MENU_PLAYLIST_DEL=Borrar canción
 SONG_MENU_NAME_PLAYLIST_ADD=Agregar canción
 SONG_MENU_PLAYLIST_ADD_NEW=A una lista nueva
 SONG_MENU_PLAYLIST_ADD_EXISTING=A una lista existente
-SONG_MENU_PLAYLIST_NOEXISTING=No hay listas
+SONG_MENU_PLAYLIST_NOEXISTING=No hay listas creadas
 
 SONG_MENU_NAME_PLAYLIST_NEW=Nueva lista de canciones
 SONG_MENU_PLAYLIST_NEW_CREATE=Crear
